--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,5 +24,8 @@
   },
   "overrides": {
     "mjml": "5.0.0-alpha.6"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.8"
   }
 }
