--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-mdx-remote": "^5.0.0",
     "prettier": "^3.7.4",
     "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "remark-gfm": "^4.0.1",
     "remark-mdx": "^3.1.1",
     "remark-parse": "^11.0.0",
